legaturi refacute, sing up si profile

--- a/pageSignIn.html
+++ b/pageSignIn.html
@@ -14,16 +14,16 @@
                 <!-- <div class="header-left">
                 </div> -->
                 <div class="header-right">
-                    <img src="./logo.png" class="logo">
+                    <img src="./resources/logo/logo.png" class="logo">
 
                     <ul class="main-nav">
-                        <li class="active"><a href="firstPageNoLog.html"><span>Home</span></a></li>
+                        <li class="active"><a href="./firstPageNoLog.html"><span>Home</span></a></li>
 
                         <div class="dropdown">
                             <li><a href="#"><span>Authenticate</span></a>
                                 <div class="dropdown-content">
-                                    <a href="pageSignIn.html">Sign in</a>
-                                    <a href="pageSignUp.html">Sign Up</a>
+                                    <a href="./pageSignIn.html">Sign in</a>
+                                    <a href="./pageSignUp.html">Sign Up</a>
                                 </div>
                             </li>
                         </div>
