--- a/firstPageLoggedin.html
+++ b/firstPageLoggedin.html
@@ -16,15 +16,15 @@
 			<div class="header-right">
                 <img src="./resources/logo/logo.png" class="logo">
 				<ul class="main-nav">
-                    <li class="active"><a href="firstPageLoggedin.html"><span>Home</span></a></li>
+                    <li class="active"><a href="./firstPageLoggedin.html"><span>Home</span></a></li>
                     
                     <div class="dropdown">
-                        <li><a href="#"><span>Personal Profile</span></a>
+                        <li><a href="./pageProfile.html"><span>Personal Profile</span></a>
                             <div class="dropdown-content">
                                 <a href="#">CV</a>
                                 <a href="#">Applications</a>
                                 <a href="#">Favorites</a>
-                                <a href="firstPageNoLog.html">Log out</a>
+                                <a href="./firstPageNoLog.html">Log out</a>
                             </div>
                         </li>
                     </div>
