--- a/pageProfile.html
+++ b/pageProfile.html
@@ -13,14 +13,12 @@
     <div class="header-wrapper">
         <div class="center">
             <header>
-                <!-- <div class="header-left">
-                    <ul class="main-nav">
-                       
+                <!-- <div class="header-left">       
                 </div> -->
                 <div class="header-right">
-                        <img src="./logo.png" class="logo">
+                        <img src="./resources/logo/logo.png" class="logo">
                     <ul class="main-nav">
-                        <li class="active"><a href="firstPageLoggedIn.html"><span>Home</span></a></li>
+                        <li class="active"><a href="./firstPageLoggedIn.html"><span>Home</span></a></li>
 
                         <div class="dropdown">
                             <li><a href="#"><span>Personal Profile</span></a>
@@ -28,7 +26,7 @@
                                     <a href="#">CV</a>
                                     <a href="#">Applications</a>
                                     <a href="#">Favorites</a>
-                                    <a href="firstPageNoLog.html">Log out</a>
+                                    <a href="./firstPageNoLog.html">Log out</a>
                                 </div>
                             </li>
                         </div>
@@ -64,7 +62,7 @@
     <div class="container">
         <div class="contentLeft">
             <h1>Bogdan Istoc</h1>
-            <img src="./user.png"class="user">
+            <img src="./resources/user/user.png"class="user">
             <p> Student @ Faculty of Computer Science Iasi </p>
             <p>Personal description</p>
         </div>
