--- a/pageSignUp.html
+++ b/pageSignUp.html
@@ -67,25 +67,25 @@
     <fieldset>
       <legend><span class="number">1</span>Your basic info</legend>
       <label for="name">First name:</label>
-      <input type="text" id="name" name="user_name">
+      <input type="text" id="name" name="user_name" required>
 
       <label for="name">Last name:</label>
-      <input type="text" id="name" name="user_name">
+      <input type="text" id="name" name="user_name" required>
 
-      <label for="name">Username:</label>
+      <label for="name">Username:</label required>
       <input type="text" id="name" name="user_name">
 
       <label for="name">Country:</label>
-      <input type="text" id="country" name="user_country">
+      <input type="text" id="country" name="user_country" required>
 
       <label for="name">City:</label>
-      <input type="text" id="city" name="user_city">
+      <input type="text" id="city" name="user_city" required>
 
       <label for="mail">Email:</label>
-      <input type="email" id="mail" name="user_email">
+      <input type="email" id="mail" name="user_email" required>
 
       <label for="phone">Phone number:</label>
-      <input type="tel" id="tel" name="user_tel">
+      <input type="tel" id="tel" name="user_tel" required>
 
       <label>Gender:</label>
       <input type="radio" id="male" name="user_gender"><label for="gender" class="light">Male</label><br>
@@ -93,10 +93,10 @@
       <input type="radio" id="other" name="user_gender"><label for="gender" class="light">Other</label>
 
       <label for="password">Password:</label>
-      <input type="password" id="password" name="user_password">
+      <input type="password" id="password" name="user_password" required>
 
       <label for="password">Confirm password:</label>
-      <input type="password" id="password" name="user_password">
+      <input type="password" id="password" name="user_password" required>
 
 
 
