--- a/pageSignIn.html
+++ b/pageSignIn.html
@@ -37,7 +37,7 @@
                             </li>
                         </div>
 
-                        <li><a href="#"><span>Jobs</span></a></li>
+                        <li><a href="./pageJobs.html"><span>Jobs</span></a></li>
                         <li><a href="#"><span>
                                     <link rel="stylesheet"
                                         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
