--- a/firstPageNoLog.html
+++ b/firstPageNoLog.html
@@ -39,7 +39,7 @@
                                 </div>
                             </li>
                         </div>
-                        <li><a href="#"><span>Jobs</span></a></li>
+                        <li><a href="./pageJobs.html"><span>Jobs</span></a></li>
                         <li><a href="#"><span>
                                     <link rel="stylesheet"
                                         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
