--- a/firstPageNoLog.html
+++ b/firstPageNoLog.html
@@ -31,7 +31,7 @@
                             </li>
                         </div>
                         <div class="dropdown">
-                            <li><a href="#"><span>Opportunities</span></a>
+                            <li><a href="./pageOportunity.html"><span>Opportunities</span></a>
                                 <div class="dropdown-content">
                                     <a href="#">Internships</a>
                                     <a href="#">Trainings</a>
