--- a/pageOportunity.html
+++ b/pageOportunity.html
@@ -31,7 +31,7 @@
                             </li>
                         </div>
                         <div class="dropdown">
-                            <li><a href="#"><span>opportunities</span></a>
+                            <li><a href="./pageOportunity.html"><span>opportunities</span></a>
                                 <div class="dropdown-content">
                                     <a href="#">Internships</a>
                                     <a href="#">Trainings</a>
@@ -40,7 +40,7 @@
                             </li>
                         </div>
 
-                        <li><a href="#"><span>events</span></a></li>
+                        <li><a href="#"><span>jobs</span></a></li>
                         <li><a href="#"><span>
                                     <link rel="stylesheet"
                                         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
