--- a/pageSignUp.html
+++ b/pageSignUp.html
@@ -29,7 +29,7 @@
               </li>
             </div>
             <div class="dropdown">
-              <li><a href="#"><span>opportunities</span></a>
+              <li><a href="./pageOportunity.html"><span>opportunities</span></a>
                 <div class="dropdown-content">
                   <a href="#">Internships</a>
                   <a href="#">Trainings</a>
