--- a/profilePage.html
+++ b/profilePage.html
@@ -19,17 +19,17 @@
                     <li class="active"><a href="#"><span>Home</span></a></li>
                     
                     <div class="dropdown">
-                        <li><a href="#"><span>Personal Profile</span></a>
+                        <li><a href="./profilePage.html"><span>Personal Profile</span></a>
                             <div class="dropdown-content">
                                 <a href="#">CV</a>
                                 <a href="#">Applications</a>
                                 <a href="#">Favorites</a>
-                                <a href="#">Log out</a>
+                                <a href="./firstPageNoLog.html">Log out</a>
                             </div>
                         </li>
                     </div>
                    <div class="dropdown">
-                        <li><a href="#"><span>opportunities</span></a>
+                        <li><a href="./pageOportunity.html"><span>opportunities</span></a>
                             <div class="dropdown-content">
                                     <a href="#">Internships</a>
                                     <a href="#">Trainings</a>
@@ -38,7 +38,7 @@
                         </li>
                    </div> 
                     
-                         <li><a href="#"><span>Jobs</span></a></li>
+                         <li><a href="./pageJobs.html"><span>Jobs</span></a></li>
 					<li><a href="#"><span>
                         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                         <form action="">
