--- a/firstPageLoggedin.html
+++ b/firstPageLoggedin.html
@@ -105,7 +105,7 @@
                 <div class="content3">
                     <h1>Here are the best jobs for you</h1>
                     <div class="grid-container">
-                            <div class="grid grid-item1">
+                            <div class="grid ">
                                 <img src="./resources/firme/Yonder.png" name="firma">
                                 <h1 class="jobtitle">FRONT-END DEVELOPER (REACT), MID/SENIOR LEVEL, CLUJ-NAPOCA</h1>
                                 <p class="jobdescription">You will be working with React, 
@@ -118,7 +118,7 @@
                                     <button type="submit" class="view">View details</button>
                                 
                             </div>
-                            <div class="grid grid-item2">
+                            <div class="grid ">
                                     <img src="./resources/firme/Conti.png" name="firma">
                                     <h1 class="jobtitle">QA Automation Engineer for Mobile Devices</h1>
                                     <p class="jobdescription">You will have the opportunity to contribute to the 
@@ -127,7 +127,7 @@
                                         <button type="submit" class="view">View details</button>
                                     
                             </div>
-                            <div class="grid grid-item3"><img src="./resources/firme/amazon.png" name="firma">
+                            <div class="grid "><img src="./resources/firme/amazon.png" name="firma">
                                 <h1 class="jobtitle">Junior Software Developer (Based in Luxembourg)</h1>
                                 <p class="jobdescription">The ideal candidate must be detail oriented, 
                                     have superior verbal and written communication skills, strong 
